# deriv-organismo

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260615_000001_initial_schema.py
docs/design/: 2026-06-16-platform-blueprint.md
docs/plans/: 2026-06-15-deriv-organismo-v1-implementation-plan.md
docs/runbooks/: local-demo.md  promotion-readiness.md
scripts/: run_market_loop.py
src/deriv_organismo/: config.py  main.py
tests/: test_account_repository.py  test_admin_routes.py  test_credential_manager.py  test_deriv_account_models.py  test_deriv_account_service.py  test_deriv_token_validator.py  test_sql_account_repository.py  test_tenant_models.py
tests/integration/: test_admin_persistence_flow.py  test_alembic_initial_migration.py  test_api_routes.py  test_auth_flow.py  test_core_platform_screens.py  test_dashboard_route.py  test_dashboard_visual.py  test_decision_pipeline.py  test_decrypted_token_flow.py  test_docs_presence.py  test_ferrari_ui.py  test_infra_files.py  test_market_loop.py  test_operations_live_route.py
tests/unit/: test_accounts.py  test_breakout_specialist.py  test_candles.py  test_config.py  test_context_scorer.py  test_db_session.py  test_deriv_client.py  test_deriv_realtime_data.py  test_events.py  test_execution_service.py  test_lab.py  test_main_database_bootstrap.py  test_mean_reversion_specialist.py  test_meta_agent.py  test_models.py  test_no_trade_specialist.py  test_persistence_foundation.py  test_project_boot.py  test_promotion.py  (+9 more)
(+61 files in other folders)
