[project]
name = "deriv-organismo"
version = "0.1.0"
description = "Organismo autônomo Deriv V1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "redis>=5.0",
  "httpx>=0.27",
  "websockets>=12.0",
  "structlog>=24.4",
  "pandas>=2.2",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "cryptography>=49.0.0",
  "jinja2>=3.1.6",
  "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.11"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
